added color to all submit buttons

--- a/src/main/resources/templates/create/create_pet.html
+++ b/src/main/resources/templates/create/create_pet.html
@@ -61,7 +61,7 @@
             <!--<input id="user" class="uk-input uk-form-width-medium uk-width-expand uk-margin-bottom" type="text" th:field="*{user}" />-->
         <!--</div>-->
         <div class="uk-width-expand uk-flex">
-            <button class="uk-button uk-button-default uk-margin-auto uk-width-1-2" onclick="UIkit.notification({message: 'Submit successful...', status: 'success'})">Submit</button>
+            <button class="uk-button uk-button-primary" onclick="UIkit.notification({message: 'Submit successful...', status: 'success'})">Submit</button>
         </div>
     </form>
 </div>
