--- a/src/main/resources/templates/system/search.html
+++ b/src/main/resources/templates/system/search.html
@@ -12,7 +12,7 @@
     <div class="uk-margin-auto">
         <form action="/search" method="post">
             <input name="search" class="uk-input uk-form-width-medium uk-container-center" type="text"/>
-            <button type="submit" class="uk-button uk-button-default uk-button-small uk-margin-left uk-container-center">Search</button>
+            <button type="submit" class="uk-button uk-button-primary">Search</button>
         </form>
     </div>
 </div>
