--- a/src/main/resources/templates/views/preferences.html
+++ b/src/main/resources/templates/views/preferences.html
@@ -39,7 +39,7 @@
                    th:field="*{weight}"/>
         </div>
 
-        <button type="submit" class="uk-margin-auto uk-button uk-button-default uk-button-small">Submit</button>
+        <button type="submit" class="uk-button uk-button-primary">Submit</button>
     </form>
 
 
