--- a/src/main/resources/templates/create/createProgram.html
+++ b/src/main/resources/templates/create/createProgram.html
@@ -40,7 +40,7 @@
     </div>
     <div class="uk-width-expand uk-flex">
         <input type="hidden" th:value="${shelters.id}" name="shelter" />
-        <button class="uk-button uk-button-default uk-button-large uk-margin-auto uk-width-1-2" type="submit">Submit</button>
+        <button class="uk-button uk-button-primary" type="submit">Submit</button>
     </div>
 </form>
 </div>
