--- a/src/main/resources/templates/edit_pages/volOppurties.html
+++ b/src/main/resources/templates/edit_pages/volOppurties.html
@@ -23,7 +23,7 @@
             <input id="time" class="uk-input uk-form-width-medium uk-width-expand uk-margin-bottom" type="text" th:field="*{time}"/>
         </div>
 
-        <button class="uk-button uk-button-default uk-button-small"> Submit </button>
+        <button class="uk-button uk-button-primary"> Submit </button>
 
     </form>
 </div>
