--- a/src/main/resources/templates/views/pet_view.html
+++ b/src/main/resources/templates/views/pet_view.html
@@ -5,18 +5,18 @@
 <nav th:replace="partials :: navbar"/>
 
     <div class="uk-flex">
-      <div class="uk-margin-auto uk-width-1-2@m uk-card uk-card-default uk-card-body">
-            <h1 class="uk-card-title" th:text="${pet.name}"/>
-            <div class="uk-width-1-2@m">
+      <div class="uk-margin-auto uk-width-1-2@m uk-card uk-card-default uk-card-body uk-text-center">
+            <strong><u><h1 class="uk-card-title" th:text="${pet.name}"/></u></strong>
+            <div class="uk-width-1-2@m uk-margin-auto">
                 <img th:src="${pet.picture}" alt="Picture of Pet"/>
             </div>
-            <h3 th:text="'Breed: '+${pet.breed}"/>
-            <h3 th:text="'Shelter: ' + ${shelter.name}"/>
-            <p th:text="'Age (in years): '+${pet.age}" />
-            <p th:text="'Color: '+${pet.color}" />
-            <p th:text="'Description: '+${pet.description}" />
-            <p th:text="'Sex: '+${pet.sex}" />
-            <p th:text="'Weight (in pounds): '+${pet.weight}" />
+            <p><strong><u>Breed: </u></strong><span th:text="${pet.breed}" /></p>
+            <p><strong><u>Shelter: </u></strong><span th:text="${shelter.name}"/></p>
+            <p><strong><u>Age (in years): </u></strong><span th:text="${pet.age}" /></p>
+            <p><strong><u>Color: </u></strong><span th:text="${pet.color}" /></p>
+            <p><strong><u>Description: </u></strong><span th:text="${pet.description}" /></p>
+            <p><strong><u>Sex: </u></strong><span th:text="${pet.sex}" /></p>
+            <p><strong><u>Weight (in pounds): </u></strong><span th:text="${pet.weight}" /></p>
           <form th:action="@{'/adopt/pet/' + ${pet.getId()}}" method="POST" th:if="${user.getIsShelter() == false}">
               <button type="submit" class="uk-button uk-button-default">Put in a application for this pet!</button>
           </form>
