--- a/src/main/resources/templates/system/landing.html
+++ b/src/main/resources/templates/system/landing.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8"/>
     <title>Pet-Tential</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.2/css/uikit.min.css" />
-    <link rel="icon" href="../static/img/paw_2.png"/>
+    <link rel="icon" href="/img/paw_2.png"/>
 
 <style>
 
