--- a/src/main/resources/templates/views/showVolunteer.html
+++ b/src/main/resources/templates/views/showVolunteer.html
@@ -30,16 +30,17 @@
     <div class="uk-child-width-1-2@m uk-grid" uk-grid="masonry:true">
         <div th:each="user : ${users}">
 
-            <div class="uk-card uk-card-hover">
-                <div class="uk-card-body">
+            <div class="uk-card">
+                <div class="uk-card-body uk-card-default uk-text-center">
+                    <strong><u><label for="name">Name:</label></u></strong>
                     <p th:text="${user.getName()}" class="uk-card-media-top"/>
                     <div class="uk-margin">
                         <div class="uk-card-media-top uk-width-auto">
-                            <label for="name">Email</label>
+                            <strong><u><label for="name">Email</label></u></strong>
                             <p id="name" th:text="${user.getEmail()}"></p>
                         </div>
                         <div class="uk-card-media-top uk-width-auto">
-                            <label for="description">Phone Number</label>
+                            <strong><u><label for="description">Phone Number</label></u></strong>
                             <p id="description" th:text="${user.getNumber()}"></p>
                         </div>
                     </div>
