adjusted form size in multiple htmls

--- a/src/main/resources/templates/system/sign-up.html
+++ b/src/main/resources/templates/system/sign-up.html
@@ -62,10 +62,10 @@
 
     <div>
     <label for="shelter"> Are you a shelter? </label>
-    <input type="checkbox" class="uk-checkbox uk-margin-small-left" id="shelter" th:field="*{isShelter}"/>
+    <input type="checkbox" class="uk-checkbox-primary uk-margin-small-left" id="shelter" th:field="*{isShelter}"/>
     </div>
     <div class="uk-width-expand uk-flex">
-        <button class="uk-button uk-button-default uk-margin-auto uk-width-1-2" value="Sign me up!" type="submit">Submit</button>
+        <button class="uk-button uk-button-primary" value="Sign me up!" type="submit">Submit</button>
     </div>
 </form>
 
