--- a/src/main/resources/templates/create/create_pet.html
+++ b/src/main/resources/templates/create/create_pet.html
@@ -12,7 +12,7 @@
 
 <div class="container uk-flex">
 
-    <form th:action="@{/create/pet}" method="POST" class="uk-margin-auto uk-width-1-2 " th:object="${pet}">
+    <form th:action="@{/create/pet}" method="POST" class="uk-margin-auto uk-width-1-3 " th:object="${pet}">
         <h1 class="uk-margin-top">Create a New Pet</h1>
         <div class="uk-margin">
             <label for="breed">Breed</label>
@@ -61,7 +61,7 @@
             <!--<input id="user" class="uk-input uk-form-width-medium uk-width-expand uk-margin-bottom" type="text" th:field="*{user}" />-->
         <!--</div>-->
         <div class="uk-width-expand uk-flex">
-            <button class="uk-button uk-button-default uk-margin-auto uk-width-1-2" onclick="UIkit.notification({message: 'Submit successful...', status: 'success'})">Submit</button>
+            <button class="uk-button uk-button-primary" onclick="UIkit.notification({message: 'Submit successful...', status: 'success'})">Submit</button>
         </div>
     </form>
 </div>
