--- a/src/main/resources/templates/edit_pages/preference-edit.html
+++ b/src/main/resources/templates/edit_pages/preference-edit.html
@@ -8,7 +8,7 @@
 
 <nav th:replace="partials :: navbar"/>
 <div class="container uk-flex">
-    <form class="uk-margin-auto uk-width-1-2" th:action="'/adopter/preferences/edit/' + ${oldPref.getId()}" method="post">
+    <form class="uk-margin-auto uk-width-1-3" th:action="'/adopter/preferences/edit/' + ${oldPref.getId()}" method="post">
 
         <h1>Edit your preference</h1>
         <p class="uk-text-center"><span th:if="${savedPref != null}" th:text="${savedPref}">No Results Found</span></p>
@@ -40,7 +40,7 @@
                    name="weight" th:value="${oldPref.getWeight()}"/>
         </div>
         <div class="uk-flex uk-width-expand">
-            <button type="submit" class="uk-margin-auto uk-width-1-2 uk-button uk-button-default">Submit</button>
+            <button type="submit" class="uk-button uk-button-primary">Submit</button>
         </div>
     </form>
 
