--- a/src/main/resources/templates/views/showVolunteer.html
+++ b/src/main/resources/templates/views/showVolunteer.html
@@ -24,9 +24,9 @@
     </nav>
 </div>
 
-<div class="uk-container">
-    <h1 class="uk-margin-top">List Of Volunteers</h1>
+<div class="uk-flex">
 
+    <h1 class="uk-margin-top">List Of Volunteers</h1>
     <div class="uk-child-width-1-2@m uk-grid" uk-grid="masonry:true">
         <div th:each="user : ${users}">
 
