--- a/src/main/resources/templates/views/program.html
+++ b/src/main/resources/templates/views/program.html
@@ -4,10 +4,8 @@
 <body>
 <nav th:replace="partials :: navbar"/>
 
-<div class="uk-container">
-    <div class="uk-grid" uk-grid="masonry:true">
-        <div class="uk-card uk-card-default uk-flex uk-flex-center uk-flex-middle">
-            <div class="uk-card-body">
+<div class="uk-flex">
+        <div class="uk-margin-auto uk-width-1-2@m uk-card uk-card-default uk-card-body uk-text-center">
                 <h1 class="uk-card-title uk-text-center" th:text="${program.name}"></h1>
                 <h2 class="uk-card-text uk-text-center" th:text="'Location: ' + ${shelter.name}"></h2>
                 <p class="uk-card-text uk-text-center" th:text="${program.type}"></p>
@@ -20,9 +18,7 @@
                 <div th:each="user : ${users}">
                     <p class="uk-card-text uk-text-center" th:text="${user.name}"></p>
                 </div>
-            </div>
         </div>
-    </div>
 </div>
 
 
