--- a/src/main/resources/templates/views/program.html
+++ b/src/main/resources/templates/views/program.html
@@ -10,13 +10,13 @@
                 <h2 class="uk-card-text uk-text-center" th:text="'Location: ' + ${shelter.name}"></h2>
                 <p class="uk-card-text uk-text-center" th:text="${program.type}"></p>
                 <p class="uk-card-text uk-text-center" th:text="${program.description}"></p>
-                <p class="uk-card-text uk-text-center" th:text="${program.time}"></p>
+                <p class="uk-card-text uk-text-center" th:text="${program.time} + ':00'"></p>
                 <p class="uk-card-text uk-text-center" th:text="${program.length} + ' hours'"></p>
                 <p class="uk-card-text uk-text-center" th:text="'Breed: ' + ${program.petType}"></p>
                 <p>Number of People Signed up: <span th:text="${users.size()}"></span></p>
-                <u><p class="uk-card-text uk-text-center">People signed up for this program</p></u>
+                <u><p class="uk-card-text uk-text-center">Number of people signed up for this program</p></u>
                 <div th:each="user : ${users}">
-                    <p class="uk-card-text uk-text-center" th:text="${user.name}"></p>
+                        <img th:src="@{/img/paw_2.png}" style="height: 50px; width: 50px;" />
                 </div>
         </div>
 </div>
