--- a/src/main/resources/templates/views/about_me.html
+++ b/src/main/resources/templates/views/about_me.html
@@ -8,11 +8,11 @@
 
     <!--Ryan-->
     <div class="uk-card uk-card-default uk-width-1-4 uk-padding-small uk-animation-slide-left">
-        <div class="uk-card-media-top">
-            <img src="/img/about_me/ryan_face.jpg" alt="Ryan's Face"/>
+        <div class="uk-card-media-top uk-text-center">
+            <img class="uk-margin-auto" src="/img/about_me/ryan_face.jpg" alt="Ryan's Face"/>
         </div>
-        <div class="uk-card-body">
-            <h3 class="uk-card-title"> Ryan Houpt </h3>
+        <div class="uk-card-body uk-margin-auto">
+            <h3 class="uk-card-title uk-text-center"> Ryan Houpt </h3>
             <ul style="list-style-type: none">
                 <li><span class="uk-margin-small-right" uk-icon="linkedin"></span><a href="https://www.linkedin.com/in/ryan-houpt/"> LinkedIn </a></li>
                 <li><span class="uk-margin-small-right" uk-icon="github"></span><a href="https://github.com/ryan-houpt "> GitHub </a></li>
@@ -23,11 +23,11 @@
 
     <!--Kyla-->
     <div class="uk-card uk-card-default uk-width-1-4 uk-padding-small uk-animation-slide-left">
-        <div class="uk-card-media-top">
-            <img src="/img/about_me/kyla_face.jpg" alt="Kyla's Face"/>
+        <div class="uk-card-media-top uk-text-center">
+            <img class="uk-margin-auto" src="/img/about_me/kyla_face.jpg" alt="Kyla's Face"/>
         </div>
-        <div class="uk-card-body">
-            <h3 class="uk-card-title"> Kyla Allen </h3>
+        <div class="uk-card-body uk-margin-auto">
+            <h3 class="uk-card-title uk-text-center"> Kyla Allen </h3>
             <ul style="list-style-type: none">
                 <li><span class="uk-margin-small-right" uk-icon="linkedin"></span><a href="https://www.linkedin.com/in/kyla-allen/"> LinkedIn </a></li>
                 <li><span class="uk-margin-small-right" uk-icon="github"></span><a href="https://github.com/Kyla-Allen"> GitHub </a></li>
@@ -38,11 +38,11 @@
 
     <!--KC-->
     <div class="uk-card uk-card-default uk-width-1-4 uk-padding-small uk-animation-slide-right">
-        <div class="uk-card-media-top">
-            <img src="/img/about_me/kc_face.jpg" alt="KC's Face"/>
+        <div class="uk-card-media-top uk-text-center">
+            <img class="uk-margin-auto" src="/img/about_me/kc_face.jpg" alt="KC's Face"/>
         </div>
-        <div class="uk-card-body">
-            <h3 class="uk-card-title"> Kenneth McInturf </h3>
+        <div class="uk-card-body uk-margin-auto">
+            <h3 class="uk-card-title uk-text-center"> Kenneth McInturf </h3>
             <ul style="list-style-type: none">
                 <li><span class="uk-margin-small-right" uk-icon="linkedin"></span><a href="https://www.linkedin.com/in/kenneth-mcinturf/"> LinkedIn </a></li>
                 <li><span class="uk-margin-small-right" uk-icon="github"></span><a href="https://github.com/kennethmcinturf"> GitHub </a></li>
@@ -53,11 +53,11 @@
 
     <!--Juan-->
     <div class="uk-card uk-card-default uk-width-1-4 uk-padding-small uk-animation-slide-right">
-        <div class="uk-card-media-top">
-            <img src="/img/about_me/juan_face.jpg" alt="Juan's Face"/>
+        <div class="uk-card-media-top uk-text-center">
+            <img class="uk-margin-auto" src="/img/about_me/juan_face.jpg" alt="Juan's Face"/>
         </div>
-        <div class="uk-card-body">
-            <h3 class="uk-card-title"> Juan De La Rose </h3>
+        <div class="uk-card-body uk-margin-auto">
+            <h3 class="uk-card-title uk-text-center"> Juan De La Rose </h3>
             <ul style="list-style-type: none">
                 <li><span class="uk-margin-small-right" uk-icon="linkedin"></span><a href="https://www.linkedin.com/in/juan-de-la-rosa/"> LinkedIn </a></li>
                 <li><span class="uk-margin-small-right" uk-icon="github"></span><a href="https://github.com/juandelarosa1224"> GitHub </a></li>
