added jquery file

--- a/src/main/resources/templates/views/adopter_home.html
+++ b/src/main/resources/templates/views/adopter_home.html
@@ -81,5 +81,9 @@
 
 <footer th:replace="partials :: footer"/>
 <div th:replace="partials :: scripts"/>
+<script>
+    "use strict";
+
+</script>
 </body>
 </html>
