landing page and nav bar

--- a/src/main/resources/templates/partials.html
+++ b/src/main/resources/templates/partials.html
@@ -23,7 +23,7 @@
                 <li><a href="/adopter/pets">View all pets</a></li>
             </ul>
         </div></div>
-        <a class="uk-navbar-item uk-logo" href="/home">Pet-tential</a>
+        <a class="uk-navbar-item uk-logo" href="/">Pet-tential</a>
         <div class="uk-navbar-right"><div>
             <ul class="uk-navbar-nav">
                 <!--Logged in users see....-->
