--- a/src/main/resources/templates/edit_pages/volOppurties.html
+++ b/src/main/resources/templates/edit_pages/volOppurties.html
@@ -13,7 +13,7 @@
 <div class="container uk-flex">
 
     <form th:action="@{/getvolunteer}" method="POST" class="uk-margin-auto uk-width-1-3" th:object="${volunteer}">
-        <h1 class="uk-margin-top">Create a New Volunteer Oppurtunity</h1>
+        <h1 class="uk-margin-top">Create a New Volunteer Opportunity</h1>
         <div class="uk-margin">
             <label for="date">Date</label>
             <input id="date" class="uk-input uk-form-width-medium uk-width-expand uk-margin-bottom" type="text"  th:field="*{date}"/>
