--- a/src/main/resources/templates/create/createProgram.html
+++ b/src/main/resources/templates/create/createProgram.html
@@ -26,7 +26,7 @@
 
     <div>
     <label for="length">Length of program (in hours)</label>
-    <input id="length" class="uk-input uk-form-width-medium uk-width-expand uk-margin-bottom" type="text" th:field="*{length}" />
+    <input id="length" class="uk-input uk-form-width-medium uk-width-expand uk-margin-bottom" type="number" th:field="*{length}" />
     </div>
 
     <div>
