--- a/src/main/resources/templates/views/all_pets.html
+++ b/src/main/resources/templates/views/all_pets.html
@@ -14,7 +14,7 @@
         <div th:each="pet : ${pets}" th:if="${pet.name.equals('deleted') == false}">
             <div class="uk-card uk-card-default">
                 <div class="uk-card-body">
-                    <a th:href="'/adopter/pet/' + ${pet.id}"><img th:src="${pet.picture}" class="uk-card-media-top" alt="Pet Image"/></a>
+                    <a th:href="'/adopter/pet/' + ${pet.id}"><img th:src="${pet.picture}" class="uk-card-media-top set-width" alt="Pet Image"/></a>
                     <div class="uk-margin uk-text-center">
                         <div class="uk-card-media-top uk-width-auto">
                             <label for="name"><strong><u>Name</u></strong></label>
