made an adopter controller to handle the buttons on the adopter home page

--- a/src/main/resources/templates/views/adopter_home.html
+++ b/src/main/resources/templates/views/adopter_home.html
@@ -36,9 +36,7 @@
                         <td th:text="${program.description}"></td>
                         <td th:text="${program.length}"></td>
                         <td>
-                            <form th:action="@{'/signup/program/' + ${program.getId()}}" method="POST">
-                                <input class="uk-button uk-button-default program-signup" type="submit" onclick="UIkit.notification({message: 'Signed Up To Program...', pos: 'top-center', status: 'success'})"/>
-                            </form>
+                                <input data-th-attr="programId = ${program.id}" type="submit" class="uk-button uk-button-default program-signup" onclick="UIkit.notification({message: 'Signed Up To Program...', pos: 'top-center', status: 'success'})"/>
                         </td>
                     </tr>
                 </div>
@@ -67,8 +65,8 @@
                                 <span th:text="${volunteer.time}"></span>
                             </td>
                             <td>
-                                <form th:action="@{'/volunteer/' + ${volunteer.id}}" method="POST">
-                                    <input class="uk-button uk-button-default" type="submit" onclick="UIkit.notification({message: 'Signed Up To Program...', pos: 'top-center', status: 'success'})"/>
+                                <form>
+                                    <input class="uk-button uk-button-default volunteer-signup" data-th-attr="programId = ${volunteer.id}" type="submit" onclick="UIkit.notification({message: 'Signed Up To Program...', pos: 'top-center', status: 'success'})"/>
                                 </form>
                             </td>
                         </tr>
@@ -80,17 +78,38 @@
 
 
 <div th:replace="partials :: scripts"/>
-<script src="/js/jquery.js">
+<script th:src="@{js/jquery.js}"></script>
+<script th:inline="javascript">
     "use strict";
 
+    // For Programs
     $(".program-signup").on("click", function (e) {
-        var url = $(this).attr("href");
-      $.ajax({
-          type: "POST",
-          url: url
-      })
+        var progId = $(this).attr("programId");
+      $.post({
+          url: "/home",
+          data: {
+              "id" : progId
+          }
+
+      });
+      $(this).attr("value", "Submitted");
+      $(this).attr("disabled", true);
+    })
+
+    // For Volunteer
+    $(".volunteer-signup").on("click", function (e) {
+        var volId = $(this).attr("volId");
+        $.post({
+            url: "/home",
+            data: {
+                "id" : progId
+            }
+
+        });
+        $(this).attr("value", "Submitted");
+        $(this).attr("disabled", true);
     })
 </script>
-</body>
 <footer th:replace="partials :: footer"/>
+</body>
 </html>
