adopter controller is done in theory

--- a/src/main/resources/templates/views/adopter_home.html
+++ b/src/main/resources/templates/views/adopter_home.html
@@ -88,7 +88,8 @@
       $.post({
           url: "/home",
           data: {
-              "id" : progId
+              "id" : progId,
+              "type" : "program"
           }
 
       });
@@ -102,7 +103,8 @@
         $.post({
             url: "/home",
             data: {
-                "id" : progId
+                "id" : progId,
+                "type" : "volunteer"
             }
 
         });
