--- a/src/main/resources/templates/views/adopter_home.html
+++ b/src/main/resources/templates/views/adopter_home.html
@@ -37,7 +37,7 @@
                         <td th:text="${program.length}"></td>
                         <td>
                             <div th:if="${progs.contains(program)}">
-                                <input disabled="disabled" data-th-attr="programId = ${program.id}" type="submit" class="uk-button uk-button-default program-signup" onclick="UIkit.notification({message: 'Signed Up To Program...', pos: 'top-center', status: 'success'})"/>
+                                <input disabled="disabled" data-th-attr="programId = ${program.id}" type="submit" value="Submitted" class="uk-button uk-button-default program-signup" onclick="UIkit.notification({message: 'Signed Up To Program...', pos: 'top-center', status: 'success'})"/>
                             </div>
                             <div th:unless="${progs.contains(program)}">
                                 <input data-th-attr="programId = ${program.id}" type="submit" class="uk-button uk-button-default program-signup" onclick="UIkit.notification({message: 'Signed Up To Program...', pos: 'top-center', status: 'success'})"/>
@@ -72,7 +72,7 @@
                             <td>
                                 <div th:if="${vols.contains(volunteer)}">
                                     <form>
-                                        <input disabled="disabled" class="uk-button uk-button-default volunteer-signup" data-th-attr="volId = ${volunteer.id}" type="submit" onclick="UIkit.notification({message: 'Signed Up To Program...', pos: 'top-center', status: 'success'})"/>
+                                        <input disabled="disabled" class="uk-button uk-button-default volunteer-signup" data-th-attr="volId = ${volunteer.id}" type="submit" value="Submitted" onclick="UIkit.notification({message: 'Signed Up To Program...', pos: 'top-center', status: 'success'})"/>
                                     </form>
                                 </div>
                                 <div th:unless="${vols.contains(volunteer)}">
