--- a/src/main/resources/templates/views/adopter_home.html
+++ b/src/main/resources/templates/views/adopter_home.html
@@ -72,7 +72,7 @@
                             <td>
                                 <div th:if="${vols.contains(volunteer)}">
                                     <form>
-                                        <input disabled="disabled" class="uk-button uk-button-default volunteer-signup" data-th-attr="volId = ${volunteer.id}" type="submit" onclick="UIkit.notification({message: 'Signed Up To Program...', pos: 'top-center', status: 'success'})"/>
+                                        <input disabled="disabled" class="uk-button uk-button-default volunteer-signup" data-th-attr="volId = ${volunteer.id}" type="submit" onclick="UIkit.notification({message: 'Signed Up To Program...', pos: 'top-center', status: 'success'}, {timeout: 2})"/>
                                     </form>
                                 </div>
                                 <div th:unless="${vols.contains(volunteer)}">
