--- a/src/main/resources/templates/views/adopter_home.html
+++ b/src/main/resources/templates/views/adopter_home.html
@@ -37,10 +37,10 @@
                         <td th:text="${program.length}"></td>
                         <td>
                             <div th:if="${progs.contains(program)}">
-                                <input disabled="disabled" data-th-attr="programId = ${program.id}" type="submit" class="uk-button uk-button-default program-signup" onclick="UIkit.notification({message: 'Signed Up To Program...', pos: 'top-center', status: 'success'})"/>
+                                <input disabled="disabled" data-th-attr="programId = ${program.id}" type="submit" class="uk-button uk-button-default program-signup" onclick="UIkit.notification({message: 'Signed Up To Program...', pos: 'top-center', status: 'success', timeout: 2000})"/>
                             </div>
                             <div th:unless="${progs.contains(program)}">
-                                <input data-th-attr="programId = ${program.id}" type="submit" class="uk-button uk-button-default program-signup" onclick="UIkit.notification({message: 'Signed Up To Program...', pos: 'top-center', status: 'success'})"/>
+                                <input data-th-attr="programId = ${program.id}" type="submit" class="uk-button uk-button-default program-signup" onclick="UIkit.notification({message: 'Signed Up To Program...', pos: 'top-center', status: 'success', timeout: 2000})"/>
                             </div>
                         </td>
                     </tr>
@@ -72,12 +72,12 @@
                             <td>
                                 <div th:if="${vols.contains(volunteer)}">
                                     <form>
-                                        <input disabled="disabled" class="uk-button uk-button-default volunteer-signup" data-th-attr="volId = ${volunteer.id}" type="submit" onclick="UIkit.notification({message: 'Signed Up To Program...', pos: 'top-center', status: 'success'}, {timeout: 2})"/>
+                                        <input disabled="disabled" class="uk-button uk-button-default volunteer-signup" data-th-attr="volId = ${volunteer.id}" type="submit" onclick="UIkit.notification({message: 'Signed Up To Program...', pos: 'top-center', status: 'success', timeout: 2000})"/>
                                     </form>
                                 </div>
                                 <div th:unless="${vols.contains(volunteer)}">
                                     <form>
-                                        <input class="uk-button uk-button-default volunteer-signup" data-th-attr="volId = ${volunteer.id}" type="submit" onclick="UIkit.notification({message: 'Signed Up To Program...', pos: 'top-center', status: 'success'})"/>
+                                        <input class="uk-button uk-button-default volunteer-signup" data-th-attr="volId = ${volunteer.id}" type="submit" onclick="UIkit.notification({message: 'Signed Up To Program...', pos: 'top-center', status: 'success', timeout: 2000})"/>
                                     </form>
                                 </div>
                             </td>
