--- a/src/main/resources/templates/system/landing.html
+++ b/src/main/resources/templates/system/landing.html
@@ -35,7 +35,7 @@
     </nav>
 </div>
 
-<a href="/home"><img th:src="@{/img/pettential_1.png}" style="width: 300px; height: 300px" class="image-overlay uk-visible@m"/></a>
+<a href="/home"><img th:src="@{/img/pettential_login.png}" style="width: 300px; height: 300px" class="image-overlay uk-visible@m"/></a>
 
     <div class="uk-background-cover uk-light uk-flex uk-flex-top" style="height: 100vh; width: 100vw; background-image: url('/img/landing7.jpg');">
 
