--- a/src/main/resources/templates/views/about_me.html
+++ b/src/main/resources/templates/views/about_me.html
@@ -14,9 +14,9 @@
         <div class="uk-card-body uk-margin-auto">
             <h3 class="uk-card-title uk-text-center"> Ryan Houpt </h3>
             <ul style="list-style-type: none">
-                <li><span class="uk-margin-small-right" uk-icon="linkedin"></span><a href="https://www.linkedin.com/in/ryan-houpt/"> LinkedIn </a></li>
-                <li><span class="uk-margin-small-right" uk-icon="github"></span><a href="https://github.com/ryan-houpt "> GitHub </a></li>
-                <li><span class="uk-margin-small-right" uk-icon="user"></span><a href="https://alumni.codeup.com/students/561"> Codeup Profile </a></li>
+                <li><span class="uk-margin-small-right" uk-icon="linkedin"></span><a href="https://www.linkedin.com/in/ryan-houpt/" target="_blank"> LinkedIn </a></li>
+                <li><span class="uk-margin-small-right" uk-icon="github"></span><a href="https://github.com/ryan-houpt" target="_blank"> GitHub </a></li>
+                <li><span class="uk-margin-small-right" uk-icon="user"></span><a href="https://alumni.codeup.com/students/561" target="_blank"> Codeup Profile </a></li>
             </ul>
         </div>
     </div>
@@ -29,9 +29,9 @@
         <div class="uk-card-body uk-margin-auto">
             <h3 class="uk-card-title uk-text-center"> Kyla Allen </h3>
             <ul style="list-style-type: none">
-                <li><span class="uk-margin-small-right" uk-icon="linkedin"></span><a href="https://www.linkedin.com/in/kyla-allen/"> LinkedIn </a></li>
-                <li><span class="uk-margin-small-right" uk-icon="github"></span><a href="https://github.com/Kyla-Allen"> GitHub </a></li>
-                <li><span class="uk-margin-small-right" uk-icon="user"></span><a href="https://alumni.codeup.com/students/552"> Codeup Profile </a></li>
+                <li><span class="uk-margin-small-right" uk-icon="linkedin"></span><a href="https://www.linkedin.com/in/kyla-allen/" target="_blank"> LinkedIn </a></li>
+                <li><span class="uk-margin-small-right" uk-icon="github"></span><a href="https://github.com/Kyla-Allen" target="_blank"> GitHub </a></li>
+                <li><span class="uk-margin-small-right" uk-icon="user"></span><a href="https://alumni.codeup.com/students/552" target="_blank"> Codeup Profile </a></li>
             </ul>
         </div>
     </div>
@@ -44,9 +44,9 @@
         <div class="uk-card-body uk-margin-auto">
             <h3 class="uk-card-title uk-text-center"> Kenneth McInturf </h3>
             <ul style="list-style-type: none">
-                <li><span class="uk-margin-small-right" uk-icon="linkedin"></span><a href="https://www.linkedin.com/in/kenneth-mcinturf/"> LinkedIn </a></li>
-                <li><span class="uk-margin-small-right" uk-icon="github"></span><a href="https://github.com/kennethmcinturf"> GitHub </a></li>
-                <li><span class="uk-margin-small-right" uk-icon="user"></span><a href="https://alumni.codeup.com/students/559"> Codeup Profile </a></li>
+                <li><span class="uk-margin-small-right" uk-icon="linkedin"></span><a href="https://www.linkedin.com/in/kenneth-mcinturf/" target="_blank"> LinkedIn </a></li>
+                <li><span class="uk-margin-small-right" uk-icon="github"></span><a href="https://github.com/kennethmcinturf" target="_blank"> GitHub </a></li>
+                <li><span class="uk-margin-small-right" uk-icon="user"></span><a href="https://alumni.codeup.com/students/559" target="_blank"> Codeup Profile </a></li>
             </ul>
         </div>
     </div>
@@ -59,9 +59,9 @@
         <div class="uk-card-body uk-margin-auto">
             <h3 class="uk-card-title uk-text-center"> Juan De La Rose </h3>
             <ul style="list-style-type: none">
-                <li><span class="uk-margin-small-right" uk-icon="linkedin"></span><a href="https://www.linkedin.com/in/juan-de-la-rosa/"> LinkedIn </a></li>
-                <li><span class="uk-margin-small-right" uk-icon="github"></span><a href="https://github.com/juandelarosa1224"> GitHub </a></li>
-                <li><span class="uk-margin-small-right" uk-icon="user"></span><a href="https://alumni.codeup.com/students/568"> Codeup Profile </a></li>
+                <li><span class="uk-margin-small-right" uk-icon="linkedin"></span><a href="https://www.linkedin.com/in/juan-de-la-rosa/" target="_blank"> LinkedIn </a></li>
+                <li><span class="uk-margin-small-right" uk-icon="github"></span><a href="https://github.com/juandelarosa1224" target="_blank"> GitHub </a></li>
+                <li><span class="uk-margin-small-right" uk-icon="user"></span><a href="https://alumni.codeup.com/students/568" target="_blank"> Codeup Profile </a></li>
             </ul>
         </div>
     </div>
