--- a/src/main/resources/templates/edit_pages/editProgram.html
+++ b/src/main/resources/templates/edit_pages/editProgram.html
@@ -33,7 +33,7 @@
             <input id="time" class="uk-input uk-form-width-medium uk-width-expand uk-margin-bottom" type="text" th:field="*{time}" />
         </div>
         <input type="hidden" name="id" th:value="${id}"/>
-        <button class="uk-button uk-button-default uk-button-small"> Submit </button>
+        <button class="uk-button-primary uk-button-default uk-button-small"> Submit </button>
     </form>
 </div>
 
