--- a/src/main/resources/templates/system/log-in.html
+++ b/src/main/resources/templates/system/log-in.html
@@ -24,7 +24,7 @@
             <input id="password" class="uk-input uk-form-width-medium uk-width-expand uk-margin-bottom" name="password" type="password" />
             </div>
             <div class="uk-width-expand uk-flex">
-                <button type="submit" class="uk-button uk-button-default uk-margin-auto uk-width-1-2" value="Log In">Log-in</button>
+                <button type="submit" class="uk-button-primary uk-button-default uk-margin-auto uk-width-1-2" value="Log In">Log-in</button>
             </div>
         </form>
     </div>
